# repo_assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  retrieval-eval.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  README.md  RISKS.md  ROADMAP.md  SCALE.md  UAT.md
docs/adr/: 0001-language-and-stack.md  0002-parsing-and-chunking.md  0003-embedding-strategy.md  0004-vector-store-and-hybrid-retrieval.md  0005-code-graph.md  0006-reasoning-pipeline.md  0007-llm-provider-and-models.md  0008-job-queue.md  0009-multitenancy-and-versioning.md  0010-reranking-disabled-by-default.md  0011-graph-channel-disabled-by-default.md  0012-agentic-loop-opt-in.md  0013-contextual-descriptions-opt-in.md  0014-api-service-and-streaming.md  0015-conversation-memory.md  0016-api-auth-and-rate-limiting.md  0017-web-ui.md  0018-incremental-indexing.md  0019-observability.md  0020-private-repositories.md  0021-security-pass.md  0022-mcp-server.md  0023-web-auth-and-user-accounts.md  0024-untrusted-tree-and-deployment-hardening.md  README.md
evals/: repos.yaml
evals/challenge/: click.yaml
evals/datasets/: click.yaml  commons-cli.yaml  is-plain-obj.yaml  log.yaml  uuid.yaml  yocto-queue.yaml
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: scale_bench.py
tests/integration/: conftest.py  test_agent_tools.py  test_api.py  test_cli_library.py  test_hybrid_retrieval.py  test_incremental.py  test_indexing_pipeline.py
tests/unit/: test_agent.py  test_api_errors.py  test_assembly.py  test_auth.py  test_chunking.py  test_enrichment.py  test_eval_metrics.py  test_evaluation.py  test_fake_providers_roundtrip.py  (+21 more)
web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
(+110 files in other folders)
