[project]
name = "repo-assistant"
version = "0.1.0"
description = "RAG-powered GitHub Repository Assistant"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "structlog>=24.4",
  "httpx>=0.27",
  "typer>=0.13",
  "arq>=0.26",
  "redis>=5.2",
  "qdrant-client>=1.12",
  "tree-sitter>=0.23",
  "tree-sitter-language-pack>=0.2",
  "anthropic>=0.40",
  "voyageai>=0.3",
  "networkx>=3.4",
  "tenacity>=9.0",
  "pyyaml>=6.0",
  "prometheus-client>=0.21",
  "opentelemetry-sdk>=1.29",
  "opentelemetry-exporter-otlp-proto-http>=1.29",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "pyjwt[crypto]>=2.10",
  "mcp>=1.28.1",
]

[project.scripts]
ra = "repo_assistant.cli.main:app"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "pyright>=1.1.389",
  "pre-commit>=4.0",
  "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_assistant"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["repo_assistant"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=repo_assistant --cov-report=term-missing"

[tool.coverage.run]
source = ["src/repo_assistant"]
